# EFT-Tracker

./: .dockerignore  .env.template  .gitattributes  .gitignore  .mcp.json  .nixpacksignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  COOLIFY_INTEGRATION_GUIDE.md  Dockerfile  LICENSE  MONOREPO.md  MONOREPO_MIGRATION_GUIDE.md  PHASE1_PLAYWRIGHT_TESTING.md  QUICKSTART.md  README.md  TAURI_V2_REFERENCE.md  eslint.config.mjs  instrumentation.ts  next.config.tauri.ts  next.config.ts  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
.claude/: 61-target-quests.md  HAIKU_GUIDE.md  HAIKU_LOG.md  PHASE_6_FINAL_DEPLOYMENT.md  README.md  REFACTORING_UI_GUIDE.md  SESSION_CONTEXT.md  TAURI_MCP_SETUP.md  UI_REVIEW_CHECKLIST.md  investigation-quest-status-fix.md  settings.json  settings.local.json
.devcontainer/: Dockerfile  POST_SETUP_NOTES.md  README.md
.github/: CODEOWNERS  DEPLOYMENT_NOTES.md  PROJECT_MANAGEMENT_GUIDE.md  PROJECT_VIEWS_GUIDE.md  WEEKLY_STATUS_TEMPLATE.md  labeler.yml  pull_request_template.md
.husky/: pre-commit  pre-push
.mcp-templates/: README.md
.mcp-templates/python/: README.md  pyproject.toml
.mcp-templates/python/src/mcp_server_example/: __init__.py  server.py
.nixpacks/: config.toml
.project-intake/: 00-ORCHESTRATOR.md  01-initial-analysis.md  02-git-setup.md  03-documentation.md  04-dev-environment.md  05-github-integration.md  06-quality-standards.md  CHANGELOG.md  README.md  TEAM_WALKTHROUGH.md  config.example.json  config.template.json
companion-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  wdio.conf.ts
companion-app/src-tauri/: Cargo.toml  tauri.conf.json
companion-app/src-tauri/capabilities/: default.json
companion-app/src-tauri/src/: eft_detector.rs  log_watcher.rs  main.rs  sync_manager.rs
docs/: API.md  API_RATE_LIMITS.md  AUTOMATED_RELEASE_PLAN.md  BRAND_GUIDE.md  CI_CD_SETUP.md  CLAUDE_RULES_GUIDE.html  CLOUDFLARE_SETUP.md  COMPANION_APP_IMPLEMENTATION.md  COMPANION_APP_PLAN.md  DATABASE_BACKUPS.md  DEPLOYMENT_VERIFICATION.md  DEV_CONTAINER_SETUP.md  HANDOFF_NEXT_UP_PHASE1.md  INCIDENT_RESPONSE.md  ISSUE_195_WRITEUP.md  ISSUE_198_WRITEUP.md  LAUNCH_CHECKLIST.md  LAUNCH_VALIDATION.md  PRODUCTION_DEPLOYMENT.md  README.md  REPOSITORY_STRUCTURE.md  RUNBOOKS.md  SECURITY_AUDIT_RESPONSE.md  SENTRY_FREE_TIER.md  SENTRY_SETUP.md  TAURI_PHASE5_GUIDE.md  TAURI_SETUP.md  TAURI_SUMMARY.md  TAURI_UPDATER_QUICK_START.md  TAURI_UPDATER_TESTING_GUIDE.md  TESTING_STRATEGY_STATUS.md  TEST_INFRASTRUCTURE_NOTES.md  TOKEN_SAVING_GUIDE.md  UPTIMEROBOT_SETUP.md  WORKFLOW_EVOLUTION.md  claude-code-token-optimization-guide.html  coolify-deployment.md  next-up-enhancement-plan.md
playwright-report/: index.html
prisma/: schema.prisma  seed-test.ts  seed.ts
scripts/: README.md  build-tauri-wrapper.js  build-tauri.js  dev-cleanup.ps1  publish-release.sh  release-tauri.sh  setup-labels.bat  setup-labels.sh  test-coolify-build.sh  validate-build.sh  wait-for-build.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.key  tauri.key.pub
src-tauri/src/: main.rs
src-tauri/~/.tauri/: eft-tracker.key  eft-tracker.key.pub
src/lib/: auth.ts  (+5 more)
templates/: README.md  (+1 more)
(+1089 files in other folders)
