[package]
name = "eft-quest-tracker"
version = "0.1.0"
description = "EFT Quest Tracker Companion App"
authors = ["Tucker Blackwell"]
license = "MIT"
repository = "https://github.com/andrew-tucker-razorvision/EFT-Tracker"
default-run = "eft-quest-tracker"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["system-tray", "notification"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
